syntax = "proto3";

import "google/protobuf/timestamp.proto";

package com.bht.pim.proto.employees;
option java_generic_services = true;
option java_multiple_files = true;

message EmployeeInfo {
    int64 id = 1;
    string visa = 2;
    string first_name = 3;
    string last_name = 4;
    google.protobuf.Timestamp birthday = 5;
}