syntax = "proto3";

import "info/EmployeeInfo.proto";

package com.bht.pim.proto.groups;
option java_generic_services = true;
option java_multiple_files = true;

message GroupInfo {
    int64 id = 1;
    employees.EmployeeInfo leader = 2;
}